--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -137,3 +137,32 @@ footer img {
   height: 1.5rem;
   padding-right: 1rem;
 }
+
+
+/* TABLET */
+
+@media only screen and (max-width: 1024px) {
+  header {
+    padding-top: 0;
+    height: 22rem;
+  }
+
+  .container {
+      width: 100%;
+  }
+
+nav.container {
+  max-width: 100%;
+}
+
+  .headline {
+    margin-top: 5rem;
+    margin-right: 2rem;
+    font-size: 1.33rem;
+    padding: 0.75rem 4rem;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+
+}
