--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,6 +27,10 @@ p {
   display: block;
 }
 
+footer, header, nav, section {
+  display: block;
+}
+
 /* HEADER */
 
 header {
@@ -57,6 +61,10 @@ nav li {
   font-size: 1em;
   display: inline-block;
   margin: 0 2rem 0 0;
+}
+
+.mobile-menu {
+  display: none;
 }
 
 header .flex {
@@ -164,5 +172,70 @@ nav.container {
 }
 
 @media only screen and (max-width: 470px) {
+  header {
+    padding-top: 0;
+    height: 17rem;
+    background-position: 20%;
+  }
 
+  header span {
+    display: none;
+  }
+
+  .menu ul.mobile-menu {
+    display: block;
+  }
+
+  .menu ul {
+    display: none;
+  }
+
+  .headline {
+    width: 100%;
+    text-align: center;
+    margin-top: 9rem;
+    font-size: 1rem;
+    padding: 1rem 0;
+  }
+
+  .features {
+    display: inline-block;
+    margin: 3.77rem 0:
+  }
+
+  .service {
+    width: 100%;
+    font-size: 0.77rem;
+  }
+
+  .service img {
+    margin-bottom: 1.54rem;
+  }
+
+  .supporting {
+    display: inline-block;
+  }
+
+  .title {
+    max-width: 100%;
+    text-align: center;
+    font-size: 1rem;
+  }
+
+  .item {
+    width: 100%;
+    font-size: 0.77rem;
+  }
+
+  .item p {
+    padding: 1rem 0.5rem;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  footer div {
+    display: none;
+  }
 }
